UI updated, corners fixed and gaps of contacts

--- a/public/src/index.css
+++ b/public/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body, input, button {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
